# sympy2code

./: README.md  pyproject.toml
java_test/src/main/java/sympy/: SympyCode.java
java_test/src/test/java/sympytest/: SympyTest.java
sympy2code/: __init__.py
sympy2code/java/: __init__.py  compose.py
tests/: __main__.py  dir_const.py  sympy_formula.py
