[tool.poetry]
name = "sympy2code"
version = "0.1.0"
description = ""
authors = ["Huang Baochen <huangbaochenwo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
